# hello_world

./: CMakeLists.txt
include/hello_world/: geometry.hpp
src/: S_linearquation.cpp  array.cpp  basic_math.cpp  cpp_file.cpp  d_AB.cpp  even_odd.cpp  fibonacci.cpp  geometry.cpp  header_and_body.cpp  median_triangle.cpp  midperpendicular.cpp  pointcloud.cpp  prime.cpp  print_hello.cpp  projection_3d.cpp  projection_triangle..cpp  projection_triangle.cpp  quadratic.cpp  quadrilateral.cpp  relative_position_of_2_circles.cpp  search.cpp  standard_deviation.cpp  test_include.cpp  triangle.cpp
