cmake_minimum_required(VERSION 3.4)

project(hello_world)

# Add executable / file de chay tren may tinh
add_executable(print_hello src/print_hello.cpp)
add_executable(basic_math src/basic_math.cpp)
add_executable(triangle src/triangle.cpp)
add_executable(even_odd src/even_odd.cpp)
add_executable(d_AB src/d_AB.cpp)
